--- a/src/styles/StyleBubbleJob.css
+++ b/src/styles/StyleBubbleJob.css
@@ -58,3 +58,37 @@ color: #080829;
 .bracket2{
     align-self:flex-end
 }
+
+
+.button-div{
+    flex-direction: row !important;
+    
+}
+.button-div button{
+    border-color: transparent;
+    background-color: #fff;
+}
+.next , .prev {
+    width: 2rem;
+    height: 2rem;
+}
+
+article {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: var(--transition);
+  }
+  article.activeSlide {
+    opacity: 1;
+    transform: translateX(0);
+  }
+  article.lastSlide {
+    transform: translateX(-100%);
+  }
+  article.nextSlide {
+    transform: translateX(100%);
+  }
