--- a/src/styles/integrates.css
+++ b/src/styles/integrates.css
@@ -38,3 +38,56 @@
   .second{
     transform: translateY(-20px);
   }
+
+  .img-area{
+    display: flex;
+    margin-top: 80px;
+  }
+
+  .title-article h3{
+    display: flex;
+    justify-content: center;
+    margin-top: 80px;
+  }
+
+  .img-area div {
+    display: flex;
+    justify-content: center;
+  }
+
+  .branding p {
+    display: flex;
+    width: 120px;
+    background-color: #d0b3f5 ;
+    border-radius: 10px;
+    justify-content: center;
+    margin: 20px 0;
+  }
+
+  .line{
+    border: 1px solid #2d2c2c16;
+    margin: 15px 0;
+  }
+
+.busines p{
+  display: flex;
+    width: 120px;
+    background-color: #D9DEFF ;
+    border-radius: 10px;
+    justify-content: center;
+    margin: 20px 0;
+}
+
+.startup p {
+  display: flex;
+    width: 120px;
+    background-color:  #cf5c454d;
+    ;
+    border-radius: 10px;
+    justify-content: center;
+    margin: 20px 0;
+}
+.img-area h5{
+  font-size: 26px;
+  font-weight: 400;
+}
