--- a/src/styles/StyleNavbar.css
+++ b/src/styles/StyleNavbar.css
@@ -1,24 +1,56 @@
-.nav-link{
-    padding:0 30px !important;
-    
-}
-.navbar {
-    padding:0 90px;
-    margin-top: 20px;
-    
-}
-.navbar-nav{
-    margin-left: 120px;
-}
 
-
-
-
-.searchButton button {
-    padding: 10px 30px;
-}
 /* <nav className="navbar navbar-expand-lg bg-body-tertiary" >
 <div className="container-fluid main-head ">
   <a className="navbar-brand" href="#">
     <img src={logo} alt="" />
   </a>  */
+.logo-nav{
+    margin-right:40px;
+}
+  .nav-links {
+    font-size: 18px;
+    color: #000;
+    font-weight: 400;
+    margin: 0 20px;
+    position: relative;
+    letter-spacing: 1px;
+  }
+  .nav-links:hover {
+    color:#0c57ec;
+    transition: .5s;
+    
+}
+@media (max-width:991px) {
+
+    .nav-links , .btn-outline-primary{
+        font-size: 22px;
+    }
+    .nav-links:hover {
+        color:#0c57ec;
+        transition: .6s
+    }
+    .navbar-nav a:hover::before{
+        width: 0 !important;
+       
+        
+    }
+
+    
+}
+
+
+.navbar-nav a::before{
+    content:'';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 3px;
+    border-radius:25px;
+    background-color:#0c57ec;
+    width: 0%;
+    transition: all .4s ease;
+}
+
+.navbar-nav a:hover::before{
+    width: 100%;
+}
