--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -81,3 +81,19 @@
     margin: 10px 10px;
 
 }
+
+.footer-link .footer-a :before{
+    content:'';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 3px;
+    border-radius:25px;
+    background-color:#0c57ec;
+    width: 0%;
+    transition: all .4s ease;
+}
+
+.footer-link .footer-a :hover::before{
+    width: 100%;
+}
