--- a/src/styles/StyleFreeTrial.css
+++ b/src/styles/StyleFreeTrial.css
@@ -16,15 +16,55 @@
 
 
 
-.left-bottom a{
-    border-radius: 14px;
-    padding: 15px 30px 20px 30px;
-    margin-right: 45px;
+
+.hovers {
+    
+    height: 4em;
+    width: 12em;
+    border: none;
+    border-radius: 1em;
     background: #3F53D8;
-    color: #fff;
-    border-color: #3F53D8;
-    cursor: pointer;
-    text-decoration: none;
-  
-}
+    font-size: 17px;
+    color: #ffffff;
+    font-family: inherit;
+    font-weight: 500;
+   }
+   
+   .hovers:hover {
+    animation: shake3856 0.3s linear infinite both;
+   }
+   
+   @keyframes shake3856 {
+    0% {
+     -webkit-transform: translate(0);
+     transform: translate(0);
+    }
+   
+    20% {
+     -webkit-transform: translate(-2px, 2px);
+     transform: translate(-2px, 2px);
+    }
+   
+    40% {
+     -webkit-transform: translate(-2px, -2px);
+     transform: translate(-2px, -2px);
+    }
+   
+    60% {
+     -webkit-transform: translate(2px, 2px);
+     transform: translate(2px, 2px);
+    }
+   
+    80% {
+     -webkit-transform: translate(2px, -2px);
+     transform: translate(2px, -2px);
+    }
+   
+    100% {
+     -webkit-transform: translate(0);
+     transform: translate(0);
+    }
+   }
+   
+
 
